package dataControllerUtils.protobuf;

import "dataControllerUtils/ADEGenericPayload.proto";

message ADEPayload {
    extensions 2 to 102;

    repeated ADEGenericPayload genericPayload = 1;
}
